@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Give the alchemy level to generated potions. Fix documentation.
+Nicolas Weeger 2011-07-30
+
 Remove socket_info.nconn which gets invalid in some cases.
 Nicolas Weeger 2011-07-24
 
